IntelliJ formatting part 2